# cpp-osx-input_source_selector

./: Makefile  README.md
.github/workflows/: ci.yml
example/: main.cpp
example-app/: CMakeLists.txt  Makefile
example-app/Resources/: Info.plist  MainMenu.xib
example-app/src/: AppDelegate.mm
include/pqrs/osx/: input_source_selector.hpp
include/pqrs/osx/input_source_selector/: selector.hpp  specifier.hpp
include/pqrs/osx/input_source_selector/extra/: boost.hpp  nlohmann_json.hpp
include/pqrs/osx/input_source_selector/impl/: entry.hpp
tests/: cget-requirements.txt
tests/src/: CMakeLists.txt  boost_test.cpp  boost_test.hpp  nlohmann_json_test.cpp  nlohmann_json_test.hpp  selector_test.cpp  selector_test.hpp  specifier_test.cpp  specifier_test.hpp  test.cpp
